--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>abSoft</title>
   <link rel="stylesheet" href="/css/styles.css">
+  
 </head>  
 <body>
   <div class="main">
@@ -14,5 +15,5 @@
   </div>
   
 </body>
-<script defer src="app.js" type="text/javascript"></script>
+<script src="app.js" type="text/javascript"></script>
 </html>
