--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,13 @@
 <body>
   <div class="main">
     <div id="app" class="container">
+      <div class="selectArea">
+        <div class="select"></div>
+        <div class="btn"></div>
+      </div>
+      <div class="result"></div>  
   </div>
   </div>
-  
 </body>
 <script src="app.js" type="text/javascript"></script>
 </html>
