--- a/public/index.html
+++ b/public/index.html
@@ -19,5 +19,5 @@
   </div>
   </div>
 </body>
-<script src="/js/script.js" type="text/javascript"></script>
+<script defer src="/js/script.js" type="text/javascript"></script>
 </html>
