--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>abSoft</title>
   <link rel="stylesheet" href="/css/styles.css">
-  
+  <!--[if IE]>
+	  <link rel="stylesheet" type="text/css" href="/css/ie.css" />
+  <![endif]-->
 </head>  
 <body>
   <div class="main">
@@ -14,6 +16,7 @@
       <div class="selectArea">
         <div class="select"></div>
         <div class="btn"></div>
+        <div style="clear:both"></div>
       </div>
       <div class="result"></div>  
   </div>
